--- a/rider_app/pubspec.yaml
+++ b/rider_app/pubspec.yaml
@@ -23,11 +23,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  
+  firebase_core: ^0.7.0
+  firebase_auth: ^0.20.0+1
+  firebase_database: ^6.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  get: ^3.24.0
 
 dev_dependencies:
   flutter_test:
@@ -45,9 +49,18 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - images/car_android.png
+    - images/car_ios.png
+    - images/car_android.png
+    - images/desticon1.png
+    - images/logo.png
+    - images/logo1.png
+    - images/pickicon.png
+    - images/posimarker.png
+    - images/redmarker.png
+    - images/taxi.png
+    - images/user_icon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -60,17 +73,20 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Signatra
+      fonts:
+        - asset: fonts/Signatra.ttf
+
+    - family: Brand-Regular
+      fonts:
+        - asset: fonts/bolt-regular.ttf
+
+    - family: Brand Bold
+      fonts:
+        - asset: fonts/bolt-semibold.ttf
+       
+          
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
