--- a/rider_app/pubspec.yaml
+++ b/rider_app/pubspec.yaml
@@ -28,10 +28,13 @@ dependencies:
   firebase_auth: ^0.20.0+1
   firebase_database: ^6.0.0
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   get: ^3.24.0
+  fluttertoast: ^7.1.6
+  progress_dialog: ^1.2.4
 
 dev_dependencies:
   flutter_test:
