--- a/rider_app/pubspec.yaml
+++ b/rider_app/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
 
   geolocator: ^6.1.14
 
+  http: ^0.12.2
+
+  provider: ^4.3.3
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
