--- a/rider_app/pubspec.yaml
+++ b/rider_app/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
 
   provider: ^4.3.3
 
+  flutter_polyline_points: ^0.2.4
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -43,6 +45,9 @@ dependencies:
   get: ^3.24.0
   fluttertoast: ^7.1.6  
   progress_dialog: ^1.2.4
+
+  font_awesome_flutter: ^8.11.0
+  animated_text_kit: ^3.1.0
 
 dev_dependencies:
   flutter_test:
