--- a/driver_app/pubspec.yaml
+++ b/driver_app/pubspec.yaml
@@ -24,10 +24,31 @@ dependencies:
   flutter:
     sdk: flutter
 
+  firebase_core: ^0.7.0
+  firebase_auth: ^0.20.0+1
+  firebase_database: ^6.0.0
 
+  google_maps_flutter: ^1.1.1
+
+  geolocator: ^6.1.14
+
+  http: ^0.12.2
+
+  provider: ^4.3.3
+
+  flutter_geofire: ^1.0.3
+
+  flutter_polyline_points: ^0.2.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+
+  get: ^3.24.0
+  fluttertoast: ^7.1.8
+  progress_dialog: ^1.2.4
+
+  font_awesome_flutter: ^8.11.0
+  animated_text_kit: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -45,7 +66,18 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+     - images/car_android.png
+     - images/car_ios.png
+     - images/car_android.png
+     - images/desticon1.png
+     - images/logo.png
+     - images/logo1.png
+     - images/pickicon.png
+     - images/posimarker.png
+     - images/redmarker.png
+     - images/taxi.png
+     - images/user_icon.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -60,7 +92,18 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+  fonts:
+      - family: Signatra
+        fonts:
+          - asset: fonts/Signatra.ttf
+
+      - family: Brand-Regular
+        fonts:
+          - asset: fonts/bolt-regular.ttf
+
+      - family: Brand Bold
+        fonts:
+          - asset: fonts/bolt-semibold.ttf
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
