--- a/driver_app/pubspec.yaml
+++ b/driver_app/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   firebase_core: ^0.7.0
   firebase_auth: ^0.20.0+1
   firebase_database: ^6.0.0
+  
 
   google_maps_flutter: ^1.1.1
 
@@ -37,6 +38,8 @@ dependencies:
   provider: ^4.3.3
 
   flutter_geofire: ^1.0.3
+
+  firebase_messaging: ^8.0.0-dev.14 
 
   flutter_polyline_points: ^0.2.4
   # The following adds the Cupertino Icons font to your application.
